continuando con el proyecto, agrego codigo javascript

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link text-secondary" href="#">Conviértete en orador</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-success" href="#">Comprar tickets</a>
+                <a class="nav-link text-success" href="./comprar_tickets.html" id="comprar_tickets">Comprar tickets</a>
             </li>
           </ul>
         </div>
@@ -111,7 +111,8 @@
     <div class="row row-cols-1 row-cols-md-2 g-0">
         <div class="col-md-6">
           <div class="card h-100">
-            <img src="./imagenes_integrador_front/honolulu.jpg">          </div>
+            <img src="./imagenes_integrador_front/honolulu.jpg">
+          </div>
         </div>
 
         <div class="row-cols-1">
